[tool.poetry]
name = "r-html"
version = "0.1.0"
description = "bot telegram bot api"
authors = ["Ivan Yastrebov" easy-quest@mail.ru]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
